--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,13 @@
 ---
+import Link from '../components/Link.astro';
+import { SEO, type Props as SEOProps } from 'astro-seo';
+
 interface Props {
-	title: string;
+	seo?: SEOProps;
+
 }
 
-const { title } = Astro.props;
+const { seo } = Astro.props;
 ---
 
 <!doctype html>
@@ -14,11 +18,35 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+    <link rel="sitemap" href="/sitemap-index.xml"/>
+    <SEO {...seo} title={seo?.title ?? "My blog"} description={seo?.description ?? "My personal blog"}/>
 	</head>
-	<body>
-		<slot />
-	</body>
+	<body class='w-full max-w-3xl mx-auto min-h-screen flex flex-col'>
+    <div class='flex justify-between items-center py-4'>
+      <header>
+        <a href='/' class='font-bold text-2xl hover:text-blue-500'
+          >Egghead ❤️ Astro</a
+        >
+      </header>
+      <nav>
+        <ul class='flex gap-4'>
+          <li><Link href='/'>Home</Link></li>
+          <li><Link href='/about'>About</Link></li>
+          <li><Link href='/blog'>Blog</Link></li>
+          <li><Link href='/feed.xml'>RSS</Link></li>
+          <li>
+            <Link href='https://github.com/nikolovlazar' isExternal> GitHub</Link>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <main class='flex-1'>
+      <slot />
+    </main>
+    <footer class='w-full mx-auto text-center py-4'>
+      <span>© {new Date().getFullYear()} Lazar Nikolov.</span>
+    </footer>
+  </body>
 </html>
 <style is:global>
 	:root {
@@ -34,7 +62,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #f6f6f6;
 		background-size: 224px;
 	}
 	code {
