--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,79 +1,104 @@
 ---
-import Link from '../components/Link.astro';
-import { SEO, type Props as SEOProps } from 'astro-seo';
+import Link from "../components/Link.astro";
+import { SEO, type Props as SEOProps } from "astro-seo";
 
 interface Props {
-	seo?: SEOProps;
-
+  seo?: SEOProps;
+  ogImage?: {
+    template: string;
+    data?: Record<string, any>;
+  };
 }
 
-const { seo } = Astro.props;
+const { seo, ogImage } = Astro.props;
+
+const ogImageUrl = `${Astro.url.origin}/og/${
+  ogImage?.template ?? "default"
+}.png?${new URLSearchParams(ogImage?.data)}`;
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-    <link rel="sitemap" href="/sitemap-index.xml"/>
-    <SEO {...seo} title={seo?.title ?? "My blog"} description={seo?.description ?? "My personal blog"}/>
-	</head>
-	<body class='w-full max-w-3xl mx-auto min-h-screen flex flex-col'>
-    <div class='flex justify-between items-center py-4'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    <SEO
+      {...seo}
+      title={seo?.title ?? "My blog"}
+      description={seo?.description ?? "My personal blog"}
+      openGraph={{
+        basic: {
+          type: "website",
+          title: seo?.title ?? "My blog",
+          image: ogImageUrl,
+          url: seo?.canonical,
+        },
+      }}
+      twitter={{
+        card: "summary_large_image",
+        image: ogImageUrl,
+      }}
+    />
+  </head>
+  <body class="w-full max-w-3xl mx-auto min-h-screen flex flex-col">
+    <div class="flex justify-between items-center py-4">
       <header>
-        <a href='/' class='font-bold text-2xl hover:text-blue-500'
+        <a href="/" class="font-bold text-2xl hover:text-blue-500"
           >Egghead ❤️ Astro</a
         >
       </header>
       <nav>
-        <ul class='flex gap-4'>
-          <li><Link href='/'>Home</Link></li>
-          <li><Link href='/about'>About</Link></li>
-          <li><Link href='/blog'>Blog</Link></li>
-          <li><Link href='/feed.xml'>RSS</Link></li>
+        <ul class="flex gap-4">
+          <li><Link href="/">Home</Link></li>
+          <li><Link href="/about">About</Link></li>
+          <li><Link href="/blog">Blog</Link></li>
+          <li><Link href="/feed.xml">RSS</Link></li>
           <li>
-            <Link href='https://github.com/nikolovlazar' isExternal> GitHub</Link>
+            <Link href="https://github.com/nikolovlazar" isExternal>
+              GitHub
+            </Link>
           </li>
         </ul>
       </nav>
     </div>
-    <main class='flex-1'>
+    <main class="flex-1">
       <slot />
     </main>
-    <footer class='w-full mx-auto text-center py-4'>
+    <footer class="w-full mx-auto text-center py-4">
       <span>© {new Date().getFullYear()} Lazar Nikolov.</span>
     </footer>
+    <style is:global>
+      :root {
+        --accent: 136, 58, 234;
+        --accent-light: 224, 204, 250;
+        --accent-dark: 49, 10, 101;
+        --accent-gradient: linear-gradient(
+          45deg,
+          rgb(var(--accent)),
+          rgb(var(--accent-light)) 30%,
+          white 60%
+        );
+      }
+      html {
+        font-family: system-ui, sans-serif;
+        background: #f6f6f6;
+        background-size: 224px;
+      }
+      code {
+        font-family:
+          Menlo,
+          Monaco,
+          Lucida Console,
+          Liberation Mono,
+          DejaVu Sans Mono,
+          Bitstream Vera Sans Mono,
+          Courier New,
+          monospace;
+      }
+    </style>
   </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #f6f6f6;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
