--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,29 +1,31 @@
 ---
-import { getCollection, type CollectionEntry } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
-import PostLike from '../../components/PostLike.astro';
+import { getCollection, type CollectionEntry } from "astro:content";
+import Layout from "../../layouts/Layout.astro";
+import PostLike from "../../components/PostLike.astro";
 
 export async function getStaticPaths() {
-  const posts = await getCollection('blog');
+  const posts = await getCollection("blog");
 
   return posts.map((post) => ({
     params: {
-      slug: post.slug
+      slug: post.slug,
     },
     props: {
-      post
+      post,
     },
-  }))
+  }));
 }
 
-const post: CollectionEntry<'blog'> = Astro.props.post;
+const post: CollectionEntry<"blog"> = Astro.props.post;
 
 const { Content } = await post.render();
 ---
 
-<Layout seo={{ title: post.data.title}}>
-  <article class='prose max-w-[80ch] mx-auto mt-12'>
-    <Content/>
-    <PostLike slug={post.slug}/>
+<Layout
+  ogImage={{ template: "blog", data: { title: post.data.title } }}
+  seo={{ title: post.data.title }}>
+  <article class="prose max-w-[80ch] mx-auto mt-12">
+    <Content />
+    <PostLike slug={post.slug} />
   </article>
 </Layout>
